# WebPy_HW6

./: create_tables.py  fill_table.py  main.py  main_2.py  pyproject.toml  various.db
services/: __init__.py  create_table.py  fill_table.py  select_tables.py  settings.py
sql_query/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
